--- a/wedding-planner-northrim/index.html
+++ b/wedding-planner-northrim/index.html
@@ -74,7 +74,7 @@
       const code = prompt('Enter your access code:');
       if(code && code.trim() === ACCESS.code){
         localStorage.setItem('nrp_weddingplanner_unlocked', '1');
-        window.location.href = './index.html';
+        window.location.href = './app.html';
       }else{
         alert('Invalid code. Please check and try again.');
       }
