--- a/wedding-planner-northrim/app.html
+++ b/wedding-planner-northrim/app.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <nav style="display:flex;gap:8px;align-items:center">
-        <a class="small" href="./landing.html">Back</a>
+        <a class="small" href="./">Back</a>
         <a class="small" href="https://northrimphotography.com" target="_blank" rel="noreferrer">Website</a>
         <span class="small">•</span>
         <a class="small" href="https://instagram.com/northrimphotography" target="_blank" rel="noreferrer">@northrimphotography</a>
